--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,11 @@ plugins {
 }
 
 group = 'com.mohistmc'
-version = '0.2'
+version = '0.3'
+
+java {
+    toolchain.languageVersion = JavaLanguageVersion.of(17)
+}
 
 repositories {
     mavenCentral()
