--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'com.mohistmc'
-version = '0.3'
+version = '0.4'
 
 java {
     toolchain.languageVersion = JavaLanguageVersion.of(17)
@@ -35,7 +35,7 @@ publishing {
 
         maven {
             name = "Mohist-Maven"
-            setUrl("file:/Mohist-Maven/maven/")
+            setUrl("file:/maven/")
         }
     }
 }
