--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ java {
     toolchain.languageVersion = JavaLanguageVersion.of(8)
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+    options.warnings = false
+}
+
 repositories {
     mavenCentral()
     maven { url 'https://maven.mohistmc.com/' }
